@@ -1,6 +1,7 @@
 version 2.5.14
 --------------
-Double thanks to Eric Junkermann for bug feedbacks.
+Double thanks to Eric Junkermann for bug feedbacks. Thanks to Volker Wysk
+for feedback.
 
 version 2.5.13
 --------------
