@@ -7,6 +7,7 @@
 
 
 
+
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>DAR - Tutorial</title></head><body style="background-color: rgb(221, 221, 221); color: rgb(0, 0, 170);" alink="#ff0000" link="#0000ff" vlink="#000055">
 <center>
 <table style="width: 90%; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
@@ -38,9 +39,9 @@ GUI over libdar are nice to use, to backup once.&nbsp; Scripting using
 dar is better as it can run in background and be scheduled every day,
 this is a matter of taste. But you need a robust solution that works
 also within a minimum environement to be able to restore your system.
-Dar provides a lot a features to backup (defining compression etc.),
+Dar provides a lot a features at backup&nbsp; time (defining compression etc.),
 thus a GUI or a script is welcome in this process, however only very
-few are necessary to restore, and in that situation, dar_static (the
+few are necessary at restoration time and in that situation, dar_static (the
 statically linked version of dar) is to my point of view, the best
 solution to use.<br>
       </div>
@@ -74,7 +75,10 @@ remember all the many feature of dar ;-) and find the -h option too
 sparse). Note that all the dar documentation is available on the web. OK you need an
 Internet access to read them.<br>
       <br>
-This make the free space on the first ZIP floppy a bit smaller: 95 MB.<br>
+This make the free space on the first ZIP floppy a bit smaller, I let
+you make the substraction because this is subject to change from system
+to system, but let's assume dar_static is less than 5 MB, thus the
+initial slice should not exceed 95 MB <br>
 *** Here comes the option: -S 95M<br>
 (Note that '-s' is lowercase for all the slices, and '-S' is UPPERCASE
 meaning the initial slice only).<br>
@@ -87,7 +91,7 @@ terminal bell (-b) when user action is needed.<br>
       <br>
 We will compress data inside the backup <br>
 *** here comes the option: -z<br>by
-default -z option uses gzip compression algorithm (bzip2 and lzo are
+default -z option uses gzip compression algorithm (bzip2, lzo, xz and some others are
 also available). Optionally, if speed is more important than archive
 size, you can degrade compression specifying the compression level :
 -z1 for example.&nbsp; <br>
@@ -98,7 +102,7 @@ This tells dar that no files out of this directory tree will be saved
 (here, it means that no files will be excluded from the backup, if no
 filter is specified, see below) here "R" stands for "Root".<br>
       <br>
-There are some files you don't want to backup like backup files
+There are some files you probably don't want to backup like backup files
 generated by emacs "*~" and .*~".<br>
 *** here comes the options: -X "*~" -X ".*~"<br>
 Note that you have to quote the mask for it not to be interpreted by
@@ -127,17 +131,17 @@ assuming that your ZIP is mounted under /mnt/zip . We could also have
 excluded all files of extension "dar" which are backup generated by dar using <code>-X "*.*.dar"</code>, but this would have&nbsp; also exclude other dar archive from the
 backup, which may not always fit your need.<br>
       <br>
-Now, as we don't save the /dev/pts /proc and /mnt/zip directories, we
+Now, as we previously excluded save the /dev/pts /proc and /mnt/zip directories, we
 would have to create these directory mount-points by hand at recovery
 time to be able to mount the corresponding filesystems. But we can
 better
-use the -D option, which does not totally ignore excluded directories
-but rather stores them as empty.<br>
+using the -D option: it changes dar's behavior by not totally ignoring excluded directories
+but rather storing them as empty.<br>
 *** here comes the option -D<br>
 thus at recovery time they will be generated automatically<br>
       <br>
 Lastly, we have to give a name to this full backup. Let's call it
-"linux_full" as it is supposed to take place on the ZIP drive, its path
+"linux_full" and as it is supposed to take place on the ZIP drive, its path
 is /mnt/zip/linux_full<br>
 *** here comes the option: -c /mnt/zip/linux_full<br>
 Note that linux_full is not a complete filename, it is a "basename", on
@@ -225,10 +229,7 @@ file system before relying on it:<br>
       <div style="margin-left: 40px; text-align: justify;"><code>dar -t
 /mnt/zip/linux_full</code><br>
       </div>
-      <div style="text-align: justify;"><br>
-will check the whole archive, while <code></code><br>
-      <br>
-It is recommended to first unmount and remount removable disk, this to flush the
+      <div style="text-align: justify;"><br>This will check the whole archive, while it is recommended to first unmount and remount removable disk, this to flush the
 cache. Else you may read data from cache (in memory) and do not detect
 an error on you disk. dar -t cannot check a single slice, it checks
 all the archive. If you need to check a single slice (for example after
@@ -319,10 +320,11 @@ would change only the following<br>
       </div>
       <div style="text-align: justify;"><br>You
 could also decide to change of device, taking a 1'44MB floppy or a
-CD-R,&nbsp; this would not cause any problem at all. After some time
+CD-R ... or maybe rather something more recent and bigger if you
+want,&nbsp; this would not cause any problem at all. After some time
 when
 you get many differential backup for a single full backup, you will
-have to make a new full backup, depending on your available time for
+have to make a new full backups, depending on your available time for
 doing it, or on your patient if one day you have to recover the whole
 data after a disk crash: You would then have to restore the full
 backup, then all the following differential backup up to the most
@@ -332,7 +334,7 @@ takes to backup and the time it takes to restore. <br>
       <br>
 Note, that starting release 1.2.0 a new command appeared that helps
 restoring <span style="text-decoration: underline;">a small set of file</span> from a lot a differential backup. Its
-name is dar_manager. See at the end of this tutorial and man page for
+name is dar_manager. See at the end of this tutorial and the associated man page for
 more.<br>
       <br>
 Another solution, is when you have too much differential backup, is to
@@ -340,13 +342,20 @@ make the next differential backup taking the last full_backup as
 reference, instead of the last differential backup done. This way, it
 will take less time than doing a full backup, and you will not have to
 restore all intermediate differential backup. Some people make
-difference between "incremental" backup and "differential" backup. Here
+difference between "<span style="font-weight: bold;">incremental</span>" backup and "<span style="font-weight: bold;">differential</span>" backup. Here
 for dar, they look like the same, it just depends on the nature of the reference backup
 you take.<br>
       <br>
 Of course, a given backup can be used as reference for several
 differential backup, there is no limitation in number nor in nature
 (the reference can be a full of differential backup).<br>
+      <br>
+Yet another solution is to setup <span style="font-weight: bold;">decremental</span> backup, this is let you
+have the full backup as the most recent one and the older ones as
+difference from the backup done just after them... but nothing is
+perfect, doing so takes much time than doing full backup at each step
+but as less storage space as doing incremental backups. here too all is
+a matter of choice, taste and use case.<br>
       <br>
       <br>
       </div>
@@ -358,28 +367,35 @@ disk has
 crashed. OK, you are happy because you have now a good argument to buy
 the very fast and very enormous very lastest hard disk available. Usually,
 you also cry because you have lost data and you will have to reinstall
-all your system, that was working for so long! <br>
+all your system, that was working&nbsp; so well and for so long! <br>
+      <br>If
+however the last backup you made is recent, then keep smiling! OK,
+you have installed your new hard disk and configured you BIOS to it
+(well at ancient time it was necessary do do something with the BIOS,
+today you can forget it). <br>
       <br>
-If however the last backup you made is recent, then keep smiling! OK,
-you have installed your new hard disk and configured you BIOS to it (if
-necessary). You will need a bootable floppy, with a minimum Linux
-system on it, that allows you to access your zip drive and your new
-empty hard disk (in the case your backup resided on ZIP disk). For
-example use the Slackware floppy disks, they are nicely done. You don't
+1. You first need to boot your new computer with the empty disk in order to restore your data onto it. For that there is <a href="http://www.knoppix.org/">Knoppix</a> or <a href="http://www.system-rescue-cd.org/">system rescue CD</a>
+that let you boot from CD or USB key. You don't
 need to install something on your brand-new disk, just make partitions
-and format as you want: We suppose your new disk is /dev/hda and
-/dev/sga is your ZIP drive. <br>
+and format them as you want (we will detail that below). You may even
+change the partition layout add new ones or merge several into one:
+what is important is that you setup each one with enough space to hold
+the data to be restored in them: We suppose your new disk is /dev/hda
+and
+/dev/sga is your removable media drive (USB key, DVD device, ...) For
+clarity, in the following we will assume it to be a set of USB keys, it
+could be CD, DVD, or other disk you would do slightly the same.<br>
       <br>
-1. Create the partition table as you wish, using<br>
+2. Create the partition table as you wish, using<br>
       </div><div style="margin-left: 40px; text-align: justify;"><code>fdisk
 /dev/hda</code><br>
       </div>
       
       <div style="text-align: justify;"><br>
-2. Format the partition which will receive your data, dar is filesystem
+3. Format the partition which will receive your data, dar is filesystem
 independent, you can use ext2 (as here in the example), ext3, ext4,
 ReiserFS, Minix, UFS, HFS Plus, XFS, whatever is the Unix-like
-filesystem you need, even if the backed up data did not reside on such
+filesystem you want, even if the backed up data did not reside on such
 filesystem at backup time!<br>
 </div><div style="margin-left: 40px; text-align: justify;"><code>mke2fs
 /dev/hda1<span style="font-family: serif;"></span></code></div>
@@ -387,22 +403,26 @@ filesystem at backup time!<br>
       </div>
 
       
-      <div style="text-align: justify;"><br>
-3. Additionally format the swap partition (if needed)<br>
+      <div style="text-align: justify;">copy
+and record in a temporary file the UUID of the generated filesystem if
+the /etc/fstab we will restore in the next steps rely in that instead
+of fixed path (like /dev/hda1).<br>
+<br>
+4. Additionally if you have created it, format the swap partition and also record the generated UUID if necessary<br>
       </div>
 
       <div style="margin-left: 40px; text-align: justify;"><code>mkswap
 -c /dev/hda2</code><br>
       </div>
       <div style="text-align: justify;"><br>
-3bis. If you have a lot of file to restore, you can activate the swap
+5. If you have a lot of file to restore, you can activate the swap
 on the partition of your new hard drive:<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>swapon
 /dev/hda2</code><br>
       </div>
       <div style="text-align: justify;"><br>
-4. Now we must mount the hard disk, somewhere.<br>
+6. Now we must mount the hard disk, somewhere.<br>
       <br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>cd /</code><br>
@@ -412,10 +432,11 @@ on the partition of your new hard drive:<br>
       </code></div>
       <div style="text-align: justify;">would do the trick<br>
       <br>
-4bis. If you want to restore your system over several partitions like
-/usr /var /home and / you must create the partitions, format them. Then
+6 bis. If you want to restore your system over several partitions like
+/usr /var /home and / , you must create the partitions, format them as seen above and then
 create the directories that will be used as mounting point an mount the
-partitions on these directories:<br>
+partitions on these directories. For example if you have / , /usr ,
+/var and /home partitions this would look like this:<br>
       <br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>mkdir
@@ -425,26 +446,30 @@ mount -t ext2 /dev/hda3 /disk/var<br>
 mount -t ext2 /dev/hda4 /disk/home<br>
       <br>
       </code></div>
-      <div style="text-align: justify;">for example if you have / , /usr ,
-/var and /home partitions.<br>
-      <br>
-5. We need to copy the dar binary from the ZIP to your disk: insert the
-floppy ZIP containing the dar_static binary to be able to freely change of ZIP disk later on:<br>
+      <div style="text-align: justify;"><br>
+      <br>7.
+If the boot system used does not already include dar/libdar (unlike
+system rescue CD and Knoppix for example) we need to copy the dar
+binary from a removable medium to your disk: insert the USB key&nbsp;
+containing the dar_static binary to be able to freely change of key
+later on:<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code><br>
 cd /</code><br>
-      <code>mkdir /zip</code><br>
-      <code>mount -t ext2 /dev/sga /zip</code><br>
-      <code>cp /zip/dar_static /disk<br>
+      <code>mkdir /usb_key</code><br>
+      <code>mount -t ext2 /dev/sga /usb_key</code><br>
+      <code>cp /usb_key/dar_static /disk<br>
       <br>
       </code></div>
-      <div style="text-align: justify;">where /dev/sga points to your
-zip drive, we will remove dar_static from your new hard drive at the end of restoration.<br>
+      <div style="text-align: justify;">where
+/dev/sga points to your usb_key drive (run "dmesg" just after plugging
+the key to know which device to use in place of the fancy /dev/sga). We
+will remove dar_static from your new hard drive at the end of
+restoration.<br>
       <br>
-6. Now we can restore the archive. The stuff has to go in /disk subdirectory<br>
+10. Now we can restore the archive. The stuff has to go in /disk subdirectory<br>
 *** here comes the option: -R /disk<br>
-      <br>
-7. The process may be long, thus it might be useful to be noticed when
+      <br>11. The process may be long, thus it might be useful to be noticed when
 a user action is required by dar.<br>
 *** here comes the option: -b<br>
 note that -p option is not required here because if a slice is missing
@@ -454,29 +479,28 @@ means the "last" slice of the backup.<br>
 let's go restoring!<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>/disk/dar_static
--x /zip/linux_full -R /disk -b</code><br>
+-x /usb_key/linux_full -R /disk -b</code><br>
       </div>
       <div style="text-align: justify;"><br>
-... and when the next zip floppy is needed,<br>
+... and when the next USB key is needed,<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>umount
-/zip<br>
+/usb_key<br>
       <br>
 </code>
       </div>
-      <div style="text-align: justify;">change the floppy and mount it:<br>
+      <div style="text-align: justify;">then unplug it, plug the next one and mount it:<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>mount
--t ext2 /dev/sga /zip<br>
+-t ext2 /dev/sga /usb_key<br>
       <br>
 </code>
       </div>
-      <div style="text-align: justify;">as previously, use an alter
+      <div style="text-align: justify;">as previously, to do that either use an second
 xterm /
 virtual console or suspend dar by CTRL-Z and awake it back by the 'fg'
 command. Then press &lt;enter&gt; to proceed with dar<br>
-      <br>
-      <br>7.
+      <br>12.
 Once finished with the restoration of linux_full, we have to do the
 same with any following differential/incremental backup. However, doing
 so will warn you any time dar restores a more recent file (file
@@ -485,59 +509,57 @@ that has been removed since the backup of reference, has to be removed
 from file system (suppression). If you don't want to press the
 &lt;enter&gt; key several thousand times: <br>
 *** here comes the option: -w<br>
-(don't warn). All file will be overwritten without warning, but you may
-also use the -r option, that will avoid trying to overwrite more recent
-files than those on filesystem. It might not be of a great use here, as you
-restore a differential backup after its reference backup on an
-initially empty disk (file stored in the differential archive are more
-recent than those in the reference). But, it might be useful in some
-other situations.<br>
+(don't warn). All file will be overwritten without warning.<br>
       <br>
 All together it makes:<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>/disk/dar_static
--x /zip/linux_diff1 -R /disk -b -w</code><br>
+-x /usb_key/linux_diff1 -R /disk -b -w</code><br>
       </div>
       <div style="text-align: justify;"><br>
 Then any additional archive:<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>/disk/dar_static
--x /zip/linux_diff2 -R /disk -b -w<br>
+-x /usb_key/linux_diff2 -R /disk -b -w<br>
 ...<br>
-/disk/dar_static -x /zip/linux...&nbsp;&nbsp;&nbsp; -R /disk -b -w</code><br>
+/disk/dar_static -x /usb_key/linux...&nbsp;&nbsp;&nbsp; -R /disk -b -w</code><br>
       </div>
-      <div style="text-align: justify;"><br>
-8. Finally, remove the dar binary from the disk:<br>
-      </div>
-      <div style="margin-left: 40px; text-align: justify;"><code>rm
-/disk/dar_static</code><br>
-      </div>
-      <div style="text-align: justify;"><br>
-9. And launch lilo for your Linux box to boot properly (if needed):<br>
+      <div style="text-align: justify;"><br>13. Finally, remove the dar binary from the disk:<br>
       </div>
       
-      <div style="margin-left: 40px; text-align: justify;"><code>lilo
+      <div style="margin-left: 40px; text-align: justify;"><code>rm
+/disk/dar_static</code><br>
+      </div><div style="text-align: justify;"><br>
+14. modify the /etc/fstab with the new UUID you have recorded at step 4, 5 and eventually 6 bis.<br>
+<br>
+15. Last, reinstall you original boot loader&nbsp; from the restored data:<br>
+      </div>
+      
+      <div style="margin-left: 40px; text-align: justify;"><code></code><code><span style="font-family: serif;">If you still use lilo type:</span></code><br>
+      <code><br>
+&nbsp;&nbsp;&nbsp; lilo
 -r /disk<br>
       <br>
-      <span style="font-family: serif;">If your boot loader is grub, simply launch grub and type at the prompt something like this:<br>
+      <span style="font-family: serif;">If your boot loader is grub/grub2 type:<br>
       <br>
       </span></code>
-      <div style="margin-left: 40px;"><code><span style="font-family: serif;"><span style="font-family: monospace;">grub&gt; root (hd0,0)</span></span></code><br>
+      <div style="margin-left: 40px;"><code><span style="font-family: serif;"><span style="font-family: monospace;">update-grub<br>
+grub-install /dev/sda<br>
+</span></span></code>
       <code><span style="font-family: serif;"></span></code></div>
       <code><span style="font-family: serif;"><br>
       </span></code>
-      </div><div style="text-align: justify;">10. You can reboot you machine and be happy with you brand-new hard
+      </div><div style="text-align: justify;">16. You can reboot you machine and be happy with you brand-new hard
 disk with your old precious data on it:<br>
       </div>
       <div style="margin-left: 40px; text-align: justify;"><code>shutdown
 -r now</code><br>
       </div>
       <div style="text-align: justify;"><br>
-OK, one day, I will make something like a bootable floppy image with
-dar inside, maybe with a simple script for user interaction... if you
-have already done it, you can tell or send me (or give me the URL
-where to get it, for I add a link to it from DAR's Homepage). [Note:
-Knoppix seems to include dar]<br>
+In this operation dar will in particular restore sparse files and hard
+linked inodes, thus you will have no drawback and even possibly better
+space usage than the original filesystem as dar can even transparently
+convert big plain files into smaller sparse files without any impact.<br>
       <br>
       </div>
       <h3 style="text-align: justify;">STEP 4(bis): recover only some
